--- a/AndroidLabs/app/src/main/res/values/strings.xml
+++ b/AndroidLabs/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\'m a button</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="login_message">Login</string>
+    <string name="login_name_message">Login Name</string>
+    <string name="password_message">Password</string>
+    <string name="switch_message">Enable Something</string>
 </resources>
