--- a/AndroidLabs/app/src/main/res/values-en-rCA/strings.xml
+++ b/AndroidLabs/app/src/main/res/values-en-rCA/strings.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- activity_start-->
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World, Eh!</string>
+    <string name="ButtonText">I\'m a button</string>
+
+    <!-- activity_login-->
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="login_message">Login</string>
+    <string name="login_name_message">Login Name</string>
+    <string name="password_message">Password</string>
+
+    <!-- activity_list_items-->
+    <string name="switch_message">Enable Something, eh</string>
 </resources>
