--- a/AndroidLabs/app/src/main/res/values-en-rCA/strings.xml
+++ b/AndroidLabs/app/src/main/res/values-en-rCA/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World, Eh!</string>
     <string name="ButtonText">I\'m a button</string>
+    <string name="startChatButton">Start Chat, Eh!</string>
 
     <!-- activity_login-->
     <string name="title_activity_login">LoginActivity</string>
@@ -19,4 +20,8 @@
     <string name="switch_message">Enable Something, eh</string>
     <string name="dialog_message">Are You Done?</string>
     <string name="dialog_title"> </string>
+
+    <!-- activity_chat_window -->
+    <string name="chat_input_text">Enter Text</string>
+    <string name="chat_send_button">Send Pls</string>
 </resources>
